--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -176,3 +176,15 @@ jobs:
         else
           exit 1
         fi
+    - name: build wheels
+      if: startsWith(github.event.ref, 'refs/tags/') || endsWith(github.event.ref, 'refs/heads/main')
+      run: |
+        python manage.py set_git_commit
+        flit build
+        cd client && flit build && cd ..
+        cp client/dist/*.whl dist
+    - name: Upload wheels
+      uses: actions/upload-artifact@v4
+      with:
+        name: hawc-wheels
+        path: dist/*.whl
