--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -180,11 +180,13 @@ jobs:
       if: startsWith(github.event.ref, 'refs/tags/') || endsWith(github.event.ref, 'refs/heads/main')
       run: |
         python manage.py set_git_commit
-        flit build
-        cd client && flit build && cd ..
+        flit build --format wheel
+        cd client && flit build --format wheel && cd ..
         cp client/dist/*.whl dist
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
         name: hawc-wheels
         path: dist/*.whl
+        if-no-files-found: ignore
+        retention-days: 7
