--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -1643,7 +1643,8 @@
     pod_unit: mg/kg/day
     uncertainty: 30
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: ''
     extrapolation_method: ''
     evidence: ''
@@ -1669,7 +1670,8 @@
     pod_unit: mg/kg/day
     uncertainty: 30
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: ''
     extrapolation_method: ''
     evidence: ''
@@ -1699,7 +1701,8 @@
     pod_unit: ''
     uncertainty: null
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: Hepatocellular adenomas and carcinomas
     extrapolation_method: Linear extrapolation from the POD ((BMCL10(HED)) associated
       with 10% extra cancer risk.
