CPHEAPM-26 - Add ToxRefDB vocab fixture and display (#1066)
* feat: add ToxRef vocab fixture and migration, create a new vocabulary page

* test: create toxref vocab tests

* fix: refactor vocab additions

* update vocab files for testing and run lint

* fix: account for undefined vocab

* lazily generate large vocab dataframes instead of on app startup

* update migrations to be consistent with current main

* rename Toxref to ToxRefDB

* remove script (move to another repo)

* a few upates from testing

* switch to guard check to return bad case, instead of check in component

* cleanup abstract class

---------

Co-authored-by: Zindah, Farha <63080@icf.com>
Co-authored-by: Andy Shapiro <shapiro.andy@epa.gov>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -1398,6 +1398,54 @@
     deprecated_on: null
     created_on: 2020-08-12 14:10:38.555965+00:00
     last_updated: 2020-08-12 14:10:38.555990+00:00
+- model: vocab.term
+  pk: 7000
+  fields:
+    uid: 7000
+    namespace: 2
+    parent: null
+    type: 1
+    name: systemic
+    notes: ''
+    deprecated_on: null
+    created_on: 2024-06-27 13:35:52.679511-05
+    last_updated: 2024-06-27 13:35:52.679511-05
+- model: vocab.term
+  pk: 7001
+  fields:
+    uid: 7001
+    namespace: 2
+    parent: 7000
+    type: 3
+    name: pathology microscopic
+    notes: ''
+    deprecated_on: null
+    created_on: 2024-06-27 13:35:52.692058-05
+    last_updated: 2024-06-27 13:35:52.692058-05
+- model: vocab.term
+  pk: 7002
+  fields:
+    uid: 7002
+    namespace: 2
+    parent: 7001
+    type: 4
+    name: eye
+    notes: ''
+    deprecated_on: null
+    created_on: 2024-06-27 13:35:52.692058-05
+    last_updated: 2024-06-27 13:35:52.692058-05
+- model: vocab.term
+  pk: 7003
+  fields:
+    uid: 7003
+    namespace: 2
+    parent: 7002
+    type: 5
+    name: dysplasia
+    notes: ''
+    deprecated_on: null
+    created_on: 2024-06-27 13:35:52.692058-05
+    last_updated: 2024-06-27 13:35:52.692058-05
 - model: vocab.entity
   pk: 1
   fields:
