--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,11 +76,18 @@ jobs:
         coverage run -m pytest --record-mode=none
         echo "# Python coverage report" >> $GITHUB_STEP_SUMMARY
         coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
+        coverage html -d coverage -i
     - name: loc
       run: |
         sudo apt-get install -y cloc
         echo "# Lines of code report" >> $GITHUB_STEP_SUMMARY
         make loc >> $GITHUB_STEP_SUMMARY
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage
+        path: coverage
+        retention-days: 90
 
   frontend:
     name: frontend
