Make AssessmentValue.study M2M (#1093)
* modify models and create migrations

* adjust template

* adjust form and template

* fix migration

* fix yaml

* fix exporter

* adjust export for multiple studies

* add study ids to export

* rename migrations; don't add studies when study is None

* don't build a helper method for this one

* fix autocomplete; it previously didn't filter to only show studies in assessment

* reduce queries on detail view

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -1691,7 +1691,8 @@
     pod_unit: mg/kg/day
     uncertainty: 30
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: ''
     extrapolation_method: ''
     evidence: ''
@@ -1717,7 +1718,8 @@
     pod_unit: mg/kg/day
     uncertainty: 30
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: ''
     extrapolation_method: ''
     evidence: ''
@@ -1747,7 +1749,8 @@
     pod_unit: ''
     uncertainty: null
     species_studied: rat
-    study: 7
+    studies:
+    - 7
     tumor_type: Hepatocellular adenomas and carcinomas
     extrapolation_method: Linear extrapolation from the POD ((BMCL10(HED)) associated
       with 10% extra cancer risk.
