--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -2094,6 +2094,34 @@
     - assessment
     object_id: 1
     created: 2024-03-13 11:30:01.123456+00:00
+- model: assessment.label
+  pk: 1
+  fields:
+    name: "assessment-1"
+    path: "0001"
+    depth: 1
+    numchild: 1
+    description: ""
+    color: "#4d8055"
+    assessment: 1
+    published: True
+    text_color: "#FFFFFF"
+    created: 2024-09-16 11:30:01.123456+00:00
+    last_updated: 2024-09-16 11:30:01.123456+00:00
+- model: assessment.label
+  pk: 2
+  fields:
+    name: "Label"
+    path: "00010001"
+    depth: 2
+    numchild: 0
+    description: "Description!"
+    color: "#4d8055"
+    assessment: 1
+    published: True
+    text_color: "#FFFFFF"
+    created: 2024-09-16 11:30:01.123456+00:00
+    last_updated: 2024-09-16 11:30:01.123456+00:00
 - model: lit.literatureassessment
   pk: 1
   fields:
