--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "dependencies": {
         "clipboard": "~2.0.11",
         "d3": "7.8.5",
+        "d3-arrow": "^0.0.25",
         "d3-cloud": "^1.2.5",
         "datatables.net": "^1.13.5",
         "lodash": "^4.17.21",
