--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -168,8 +168,8 @@ jobs:
     - name: install
       run: |
         mv tests/data/ci-webpack-stats.json hawc/webpack-stats.json
-        uv venv venv
-        venv\bin\activate
+        uv venv venv --python-preference only-system --prompt hawc
+        source venv/bin/activate
         uv pip install -U wheel
         uv pip install -e ".[dev,docs]"
         uv pip install -e client
@@ -179,14 +179,14 @@ jobs:
       id: test
       continue-on-error: true
       run: |
-        venv\bin\activate
+        source venv/bin/activate
         py.test -sv tests/integration/
     - name: run integration tests (retry)
       if: steps.test.outcome=='failure'
       id: retry
       continue-on-error: true
       run: |
-        venv\bin\activate
+        source venv/bin/activate
         py.test -sv --lf tests/integration/
     - name: set status
       if: always()
@@ -199,7 +199,7 @@ jobs:
     - name: build wheels
       if: startsWith(github.event.ref, 'refs/tags/') || endsWith(github.event.ref, 'refs/heads/main')
       run: |
-        venv\bin\activate
+        source venv/bin/activate
         python manage.py set_git_commit
         flit build --format wheel
         cd client && flit build --format wheel && cd ..
