--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,10 +177,10 @@ jobs:
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
       id: test
-      continue-on-error: true
+      continue-on-error: false
       run: |
         source venv/bin/activate
-        py.test -sv tests/integration/
+        py.test -svvv tests/integration/
     - name: run integration tests (retry)
       if: steps.test.outcome=='failure'
       id: retry
@@ -196,18 +196,3 @@ jobs:
         else
           exit 1
         fi
-    - name: build wheels
-      if: startsWith(github.event.ref, 'refs/tags/') || endsWith(github.event.ref, 'refs/heads/main')
-      run: |
-        source venv/bin/activate
-        python manage.py set_git_commit
-        flit build --format wheel
-        cd client && flit build --format wheel && cd ..
-        cp client/dist/*.whl dist
-    - name: Upload wheels
-      uses: actions/upload-artifact@v4
-      with:
-        name: wheel
-        path: dist/*.whl
-        if-no-files-found: ignore
-        retention-days: 7
